--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -118,6 +118,7 @@ header{
                 background: #ffffff;
                 color: #4e4e4e;
                 &::after{
+                    background: #1d2233;
                     right: 0;
                     left: unset;
                 }
