--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -48,6 +48,8 @@
                 padding-top: 40px;
                 justify-content: center;
                 input{
+                    background-color: #161616;
+                    color: #ffffff;
                     width: 50%;
                 }
                 #btnBuscar{
