--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -48,8 +48,7 @@
                 padding-top: 40px;
                 justify-content: center;
                 input{
-                    background-color: #161616;
-                    color: #ffffff;
+                    border: #161616 1px solid;
                     width: 50%;
                 }
                 #btnBuscar{
