--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,7 +14,7 @@
   color: #ffffff;
   font-family: LatamSans; }
 
-.ligth {
+body {
   background-color: #ffffff;
   color: #000000;
   font-family: LatamSans; }
